Replace "Apply" button with "OK" in several dialogs.

--- a/bitsharesqt/createasset.ui
+++ b/bitsharesqt/createasset.ui
@@ -748,7 +748,7 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
-      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
