--- a/bitsharesqt/transactionbuilder.ui
+++ b/bitsharesqt/transactionbuilder.ui
@@ -21,7 +21,16 @@
    <property name="spacing">
     <number>20</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>10</number>
+   </property>
+   <property name="topMargin">
+    <number>10</number>
+   </property>
+   <property name="rightMargin">
+    <number>10</number>
+   </property>
+   <property name="bottomMargin">
     <number>10</number>
    </property>
    <item>
