Add type selector to Remotes editor.

--- a/bitsharesqt/remotes.ui
+++ b/bitsharesqt/remotes.ui
@@ -36,6 +36,11 @@
        <string>URL</string>
       </property>
      </column>
+     <column>
+      <property name="text">
+       <string>Type</string>
+      </property>
+     </column>
     </widget>
    </item>
    <item>
