Make asset name field editable in the sale custom operation window.

--- a/bitsharesqt/mainwindow.ui
+++ b/bitsharesqt/mainwindow.ui
@@ -2593,6 +2593,9 @@ image: &quot;&quot;;
                    <height>20</height>
                   </size>
                  </property>
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
