--- a/bitsharesqt/createasset.ui
+++ b/bitsharesqt/createasset.ui
@@ -107,6 +107,9 @@
              <height>20</height>
             </size>
            </property>
+           <property name="maxLength">
+            <number>16</number>
+           </property>
           </widget>
          </item>
          <item row="2" column="0">
