Allow BlockTrades (and children) interfaces to bypass SSL certificate checks.
This is required by some half-broken gateways.

--- a/bitsharesqt/mainwindow.ui
+++ b/bitsharesqt/mainwindow.ui
@@ -135,7 +135,7 @@ image: &quot;&quot;;
              </size>
             </property>
             <property name="placeholderText">
-             <string>Type to search</string>
+             <string>Type to search, use the : symbol for Market view</string>
             </property>
            </widget>
           </item>
