--- a/bitsharesqt/accountwizard.ui
+++ b/bitsharesqt/accountwizard.ui
@@ -423,22 +423,8 @@
      <property name="verticalSpacing">
       <number>20</number>
      </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="faucetLabel">
-       <property name="text">
-        <string>Faucet:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="faucetBox"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="registrarLabel">
-       <property name="text">
-        <string>Registrar:</string>
-       </property>
-      </widget>
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="registrarBox"/>
@@ -487,6 +473,23 @@
       <widget class="QLabel" name="faucetComment">
        <property name="text">
         <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QRadioButton" name="faucetRadio">
+       <property name="text">
+        <string>Faucet</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QRadioButton" name="registrarRadio">
+       <property name="text">
+        <string>Registrar</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
