--- a/bitsharesqt/accountwizard.ui
+++ b/bitsharesqt/accountwizard.ui
@@ -176,7 +176,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>account name</string>
+        <string>Account Name</string>
        </property>
       </widget>
      </item>
@@ -193,7 +193,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>password</string>
+        <string>Password</string>
        </property>
       </widget>
      </item>
@@ -261,7 +261,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>account name</string>
+        <string>Account Name</string>
        </property>
       </widget>
      </item>
@@ -271,7 +271,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
-        <string>password</string>
+        <string>Password</string>
        </property>
       </widget>
      </item>
@@ -346,7 +346,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>You must remember (or write down) this brain key - it could be used to restore your account at any later date, using any BitShares software.</string>
+     <string>You must remember (or write down) this Brain Key - it could be used to restore your account at any later date, using any BitShares software.</string>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
@@ -393,7 +393,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Enter your brain key:</string>
+     <string>Enter your Brain Key:</string>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
@@ -432,7 +432,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_12">
        <property name="text">
-        <string>Account Name:</string>
+        <string>Account Name</string>
        </property>
       </widget>
      </item>
@@ -442,7 +442,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_27">
        <property name="text">
-        <string>Owner key:</string>
+        <string>Owner Key</string>
        </property>
       </widget>
      </item>
@@ -452,7 +452,7 @@
      <item row="4" column="0">
       <widget class="QLabel" name="label_17">
        <property name="text">
-        <string>Active key:</string>
+        <string>Active Key</string>
        </property>
       </widget>
      </item>
@@ -462,7 +462,7 @@
      <item row="5" column="0">
       <widget class="QLabel" name="label_20">
        <property name="text">
-        <string>Memo key:</string>
+        <string>Memo Key</string>
        </property>
       </widget>
      </item>
@@ -516,7 +516,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
-        <string>Private keys:</string>
+        <string>Private Keys</string>
        </property>
       </widget>
      </item>
@@ -535,7 +535,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_10">
        <property name="text">
-        <string>Account name:</string>
+        <string>Account Name</string>
        </property>
       </widget>
      </item>
