Add "import mode" to Account Wizard.
This mode is for importing accounts with a known name.

--- a/bitsharesqt/accountwizard.ui
+++ b/bitsharesqt/accountwizard.ui
@@ -530,6 +530,9 @@
        <property name="plainText">
         <string/>
        </property>
+       <property name="placeholderText">
+        <string>One private key per line.</string>
+       </property>
       </widget>
      </item>
      <item row="0" column="0">
