--- a/bitsharesqt/dashboard.ui
+++ b/bitsharesqt/dashboard.ui
@@ -147,7 +147,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="transferMemoLabel">
         <property name="text">
-         <string>Message</string>
+         <string>Memo</string>
         </property>
        </widget>
       </item>
@@ -182,6 +182,9 @@
           <width>0</width>
           <height>0</height>
          </size>
+        </property>
+        <property name="placeholderText">
+         <string>Optional message.</string>
         </property>
        </widget>
       </item>
